--- a/Areas/Admin/Views/Shared/_MainLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_MainLayout.cshtml
@@ -86,6 +86,9 @@
         function _UserManagement() {
             $(location).attr("href", "/Admin/UserManagement/UserIndex");
         }
+        function _Register() {
+            $(location).attr("href", "/Admin/UserManagement/Add");
+        }
     </script>
     @RenderSection("js", false)
 </body>
