--- a/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
+++ b/Areas/Admin/Views/CompanyManagement/CompanyIndex.cshtml
@@ -1,28 +1,30 @@
-﻿
-@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml";
-}
+﻿@{ List<string> list_permission = (List<string>)Session["ListPermission"];
+    List<string> list_role = (List<string>)Session["ListRole"]; }
+@{ Layout = "~/Areas/Admin/Views/Shared/_MainLayout.cshtml"; }
 
-<div class="header bg-primary">
-    <div class="container-fluid">
-        <div class="header-body">
-            <div class="row align-items-center py-4">
-                <div class="col-lg-6 col-7">
-                    <h6 class="h2 text-white d-inline-block mb-0">Company</h6>
-                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                            <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                            <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                        </ol>
-                    </nav>
-                </div>
-                <div class="col-lg-6 col-5 text-right">
-                    <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>
-                    <a class="btn btn-sm btn-neutral" href="/Admin/CompanyManagement/CompanyIndex">Reload</a>
-                </div>
+<div class="container" style="box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;">
+    <div class="header-body">
+        <div class="row align-items-center py-4">
+            <div class="col-lg-6 col-7">
+                <h6 class="h2 d-inline-block mb-0">Company Management</h6>
+                <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                    <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                        <li class="breadcrumb-item"><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                        <li class="breadcrumb-item"><a href="#">Tables</a></li>
+                    </ol>
+                </nav>
+            </div>
+            <div class="col-lg-6 col-5 text-right">
+                @if (list_permission.Contains("Admin") || list_role.Contains("Admin"))
+                {
+    <a href="#" class="btn btn-sm btn-neutral" data-toggle="modal" data-target="#myModal1">Add New</a>}
+
+                <a class="btn btn-sm btn-neutral" href="/Admin/CompanyManagement/CompanyIndex">Reload</a>
             </div>
         </div>
     </div>
 </div>
+
 
 <div class="container" style="margin-top: 30px;padding-bottom: 40px">
     <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -67,11 +69,12 @@
                         <div style="float:right;width: 55%">
                             <div class="loader"></div>
                         </div>
-                        
+
                     </div>
-                    
+
                     <div class="modal-footer col-md-12">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
                         <button type="button" class="btn btn-primary" onclick="return _Add();">Add</button>
                     </div>
                 </div>
@@ -152,45 +155,50 @@
                     <tbody class="list">
                         @foreach (var item in ViewBag.list_company)
                         {
-                            <tr>
-                                <th>
-                                    <div class="media align-items-center">
-                                        <a href="#" class="avatar rounded-circle mr-3">
-                                            <img alt="Image placeholder" src="~/Areas/Admin/Public/img/theme/bootstrap.jpg">
-                                        </a>
-                                        <div class="media-body">
-                                            <span class="name mb-0 text-sm">@item.Company_Name</span>
-                                        </div>
-                                    </div>
-                                </th>
-                                <td>
-                                    @item.Company_Phone
-                                </td>
-                                <td class="">
-                                    <span class="badge badge-dot mr-4">
-                                        <i class="bg-warning"></i>
-                                        <span class="status">@item.Company_Address</span>
-                                    </span>
-                                </td>
-                                <td>
-                                    @item.Company_Email
-                                </td>
-                                <td class="Description">
-                                    @item.Company_Description
-                                </td>
-                                <td class="text-right">
-                                    <div class="dropdown">
-                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                            <a class="dropdown-item" data-toggle="modal" data-target="#myModal2" href="#" onclick="return _GetById(@item.Id)">Edit</a>
-                                            <a class="dropdown-item" onclick="return _Delete(@item.Id)" id="@item.Id" href="#">Delete</a>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+            <tr>
+                <th>
+                    <div class="media align-items-center">
+                        <a href="#" class="avatar rounded-circle mr-3">
+                            <img alt="Image placeholder" src="~/Areas/Admin/Public/img/theme/bootstrap.jpg">
+                        </a>
+                        <div class="media-body">
+                            <span class="name mb-0 text-sm">@item.Company_Name</span>
+                        </div>
+                    </div>
+                </th>
+                <td>
+                    @item.Company_Phone
+                </td>
+                <td class="">
+                    <span class="badge badge-dot mr-4">
+                        <i class="bg-warning"></i>
+                        <span class="status">@item.Company_Address</span>
+                    </span>
+                </td>
+                <td>
+                    @item.Company_Email
+                </td>
+                <td class="Description">
+                    @item.Company_Description
+                </td>
+                <td class="text-right">
+                    <div class="dropdown">
+                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                            @if (list_permission.Contains("Company_Edit") || list_role.Contains("Admin"))
+                            {
+            <a class="dropdown-item" data-toggle="modal" data-target="#myModal2" href="#" onclick="return _GetById(@item.Id)">Edit</a>}
+                            @if (list_permission.Contains("Company_Delete") || list_role.Contains("Admin"))
+                            {
+            <a class="dropdown-item" onclick="return _Delete(@item.Id)" id="@item.Id" href="#">Delete</a>}
+
+                        </div>
+                    </div>
+                </td>
+            </tr>
+}
 
 
                     </tbody>
@@ -328,7 +336,7 @@
                             alert("Error !");
                         }
                     });
-                    
+
                 }
             });
         }
