--- a/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_TopnavLayout.cshtml
@@ -1,11 +1,14 @@
 ﻿@using _ExcellOn_.Models
+@{ List<string> list_permission = (List<string>)Session["ListPermission"];
+    List<string> list_role = (List<string>)Session["ListRole"]; }
 <style>
-    .dropdown-item{
+    .dropdown-item {
         cursor: pointer;
     }
 </style>
 
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+
+<nav class="navbar navbar-top navbar-expand" style="border-bottom: solid 2px; border-top: solid 2px">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <!-- Search form -->
@@ -13,7 +16,7 @@
                 <div class="form-group mb-0">
                     <div class="input-group input-group-alternative input-group-merge">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-search"></i></span>
+                            <span class="input-group-text"><i class="fa fa-search" aria-hidden="true"></i></span>
                         </div>
                         <input class="form-control" placeholder="Search" type="text">
                     </div>
@@ -102,9 +105,7 @@
                     </div>
                 </li>
             </ul>
-            @{ 
-                UserInFo current_user = (UserInFo)Session["UserName"];
-            }
+            @{ UserInFo current_user = (UserInFo)Session["UserName"]; }
             <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
                 <li class="nav-item dropdown">
                     <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -121,18 +122,24 @@
                         <div class="dropdown-header noti-title">
                             <h6 class="text-overflow m-0">Welcome!</h6>
                         </div>
+
                         <a class="dropdown-item" onclick="return _Profile()">
                             <i class="ni ni-single-02"></i>
                             <span>My profile</span>
                         </a>
-                        <a class="dropdown-item" onclick="return _Authorize()">
-                            <i class="ni ni-settings-gear-65"></i>
-                            <span >Department</span>
-                        </a>
-                        <a class="dropdown-item" onclick="return _UserManagement()">
-                            <i class="ni ni-calendar-grid-58"></i>
-                            <span>User Management</span>
-                        </a>
+
+                        @if (list_permission.Contains("Admin") || list_role.Contains("Admin"))
+                        {
+                            <a class="dropdown-item" onclick="return _Authorize()">
+                                <i class="ni ni-settings-gear-65"></i>
+                                <span>Role Management</span>
+                            </a>}
+                        @if (list_permission.Contains("Admin") || list_role.Contains("Admin"))
+                        {
+                            <a class="dropdown-item" onclick="return _UserManagement()">
+                                <i class="ni ni-calendar-grid-58"></i>
+                                <span>User Management</span>
+                            </a>}
                         <a class="dropdown-item">
                             <i class="ni ni-support-16"></i>
                             <span>Support</span>
