--- a/Areas/Admin/Views/StaffManagement/Add.cshtml
+++ b/Areas/Admin/Views/StaffManagement/Add.cshtml
@@ -37,14 +37,14 @@
                                 <div class="card-profile-stats d-flex justify-content-center mt-md-5">
                                     <div>
                                         <span class="heading"></span>
-                                        <span class="description">My Age</span>
+                                        <span class="description">Age</span>
                                     </div>
                                     <div>
-                                        <span class="heading">10</span>
+                                        <span class="heading"></span>
                                         <span class="description">Photos</span>
                                     </div>
                                     <div>
-                                        <span class="heading">89</span>
+                                        <span class="heading"></span>
                                         <span class="description">Comments</span>
                                     </div>
                                 </div>
@@ -104,7 +104,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label class="form-control-label" for="input-email">Password</label>
-                                            <input type="password" name="Staff_Password" class="form-control form-control-alternative">
+                                            <input type="password" required name="Staff_Password" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
@@ -112,18 +112,18 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-city">Age</label>
-                                            <input type="number" name="Staff_Age" class="form-control form-control-alternative">
+                                            <input type="number" required name="Staff_Age" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-last-name">Full Name</label>
-                                            <input type="text" name="Staff_FullName" class="form-control form-control-alternative">
+                                            <input type="text" required name="Staff_FullName" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
-                                            <label class="form-control-label" style="margin-bottom: 20px" for="input-address">Gender</label>
+                                            <label class="form-control-label"  style="margin-bottom: 20px" for="input-address">Gender</label>
                                             <div>
                                                 <span style="margin-right: 150px">
                                                     <input type="radio" name="Staff_Gender" value="0">
@@ -163,7 +163,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">Address</label>
-                                            <input name="Staff_Address" class="form-control form-control-alternative" type="text">
+                                            <input name="Staff_Address" required class="form-control form-control-alternative" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -171,13 +171,13 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-first-name">Email Address</label>
-                                            <input type="text" name="Staff_Email" class="form-control form-control-alternative">
+                                            <input type="text" required name="Staff_Email" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-country">Telephone</label>
-                                            <input type="text" name="Staff_Phone" class="form-control form-control-alternative">
+                                            <input type="text" required name="Staff_Phone" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
