--- a/Areas/Admin/Views/UserManagement/Add.cshtml
+++ b/Areas/Admin/Views/UserManagement/Add.cshtml
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <form action="/Admin/StaffManagement/Add" method="post" enctype="multipart/form-data">
+                        <form action="/Admin/UserManagement/Submit_Add" method="post" enctype="multipart/form-data">
                             <h6 class="heading-small text-muted mb-4">User information</h6>
                             <div class="pl-lg-4">
                                 <div class="row">
@@ -104,7 +104,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label class="form-control-label" for="input-email">Password</label>
-                                            <input type="password" name="User_Password" class="form-control form-control-alternative">
+                                            <input type="password" required name="User_Password" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
@@ -112,13 +112,13 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-city">Age</label>
-                                            <input type="number" name="User_Age" class="form-control form-control-alternative">
+                                            <input type="number" required name="User_Age" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-last-name">Full Name</label>
-                                            <input type="text" name="User_FullName" class="form-control form-control-alternative">
+                                            <input type="text" required name="User_FullName" class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -139,11 +139,11 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">Department</label>
-                                            <select name="ServiceId" class="form-control form-control-alternative">
+                                            <select name="RoleId[]" class="select" multiple>
                                                 @foreach (var item in ViewBag.list_role)
                                                 {
-                                                    <option value="@item.Id">@item.Role_Name</option>
-                                                }
+                                    <option value="@item.Id">@item.Role_Name</option>
+}
                                             </select>
 
                                         </div>
@@ -163,7 +163,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-address">Address</label>
-                                            <input name="User_Address" class="form-control form-control-alternative" type="text">
+                                            <input name="User_Address" required class="form-control form-control-alternative" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -171,13 +171,13 @@
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-first-name">Email Address</label>
-                                            <input type="text" name="User_Email" class="form-control form-control-alternative">
+                                            <input type="text" name="User_Email" required class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group focused">
                                             <label class="form-control-label" for="input-country">Telephone</label>
-                                            <input type="text" name="User_Phone" class="form-control form-control-alternative">
+                                            <input type="text" name="User_Phone" required class="form-control form-control-alternative">
                                         </div>
                                     </div>
                                 </div>
@@ -205,3 +205,22 @@
         </div>
     </div>
 </footer>
+
+@section css{
+    <style>
+        .select2-container--default .select2-selection--multiple .select2-selection__choice{
+            color: black!important;
+        }
+    </style>
+    }
+@section js{
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    <script>
+        $('select').select2({
+            placeholder: 'Role',
+            tokenSeparators: [',', ' '],
+            
+        });
+    </script>
+}
